crates/solidity/testing/snapshots/bindings_output/using/elementary/generated/v2/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[input.sol:3:1]
   │
 3 │ ╭─▶ using {square} for int;
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯

------------------------------------------------------------------------

Definitions (2):
- Def: #1 ["square" @ input.sol:1:10] (function, type: function (int256) returns int256)
- Def: #2 ["value" @ input.sol:1:21] (parameter, type: int256)

------------------------------------------------------------------------

References (0):

------------------------------------------------------------------------

Unbound identifiers (0):

------------------------------------------------------------------------

Bindings: 
   ╭─[input.sol:1:1]
   │
 1 │ function square(int value) returns (int) {}
   │          ───┬──     ──┬──  
   │             ╰────────────── name: 1
   │                       │    
   │                       ╰──── name: 2
───╯
